--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,14 +3,16 @@
     <h1 class="text-center"> New Campground</h1>
     <div class="col-6 offset-3">
 
-        <form action="/campgrounds" method='POST'>
+        <form action="/campgrounds" method='POST' novalidate class="validated-form">
             <div class="mb-3">
                 <label class="form-label" for="title"> Title </label>
-                <input class="form-control" type="text" id="title" name="campground[title]">
+                <input class="form-control" type="text" id="title" name="campground[title]" required>
+                <div class="valid-feedback"> Looks Good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location"> Location </label>
-                <input class="form-control" type="text" id="location" name="campground[location]">
+                <input class="form-control" type="text" id="location" name="campground[location]" required>
+                <div class="valid-feedback"> Looks Good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price"> Campground Price </label>
@@ -18,17 +20,20 @@
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
                     <input type="text" class="form-control" placeholder="0" aria-label="price"
-                        aria-describedby="price-label" name="campground[price]">
+                        aria-describedby="price-label" name="campground[price]" required>
                 </div>
+                <div class="valid-feedback"> Looks Good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="image"> Image URL </label>
-                <input class="form-control" type="text" id="image" name="campground[image]">
+                <input class="form-control" type="text" id="image" name="campground[image]" required>
+                <div class="valid-feedback"> Looks Good!</div>
             </div>
 
             <div class="mb-3">
                 <label class="form-label" for="description"> Description </label>
-                <input class="form-control" type="text" id="description" name="campground[description]">
+                <input class="form-control" type="text" id="description" name="campground[description]" required>
+                <div class="valid-feedback"> Looks Good!</div>
             </div>
             <div class="mb-3">
                 <button class="btn btn-success">Create New!</button>
