--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -9,14 +9,17 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item text-muted"><%= campground.location %> </li>
+                <li class="list-group-item ">created by: <%= campground.author.username %> </li>
                 <li class="list-group-item">$<%= campground.price %>/night </li>
             </ul>
+            <% if(currentUser && currentUser._id.equals(campground.author)) {%>
             <div class="card-body">
                 <a class="card-link btn btn-info " href="/campgrounds/<%=campground._id%>/edit">Edit</a>
                 <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
                     <button class="btn btn-danger">Delete</button>
                 </form>
             </div>
+            <% } %>
             <a class="mb-3" href="/campgrounds"> All Campgrounds</a>
 
 
@@ -25,6 +28,7 @@
         </div>
     </div>
     <div class="col-6">
+        <% if(currentUser) { %>
         <h3> Leave a Review</h3>
         <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form" novalidate>
             <div class="mb-3">
@@ -37,18 +41,21 @@
             </div>
             <button type="submit" class="btn btn-success">Submit</button>
         </form>
-
+        <% } %>
         <% for(let review of campground.reviews){ %>
         <div class="card mb-3">
             <div class="card-body">
-                <div class="mb-3">
-                    <p>Review <%= review.body %></p>
-                    <p>Rating <%= review.rating  %> </p>
-                    <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
-                        method="POST">
-                        <button class="btn btn-danger">Delete</button>
-                    </form>
-                </div>
+
+                <h5 class="card-title">Rating <%= review.rating  %> </h5>
+                <h6 class="card-subtitle mb-2 text-muted">Author <%= review.author.username  %> </h6>
+                <p class="card-txt">Review <%= review.body %></p>
+                <% if(currentUser && review.author.equals(currentUser._id)) {%>
+                <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
+                    method="POST">
+                    <button class="btn btn-danger">Delete</button>
+                </form>
+                <% } %>
+
             </div>
         </div>
         <% } %>
