--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,5 @@
 <% layout('/layouts/boilerplate')%>
+<div id="map" style="width: 100%; height: 500px"></div>
 <h1>All Campgrounds</h1>
 <div>
     <a href="/campgrounds/new"> Add Campground</a>
@@ -12,8 +13,8 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title"><%= campground.title  %>
-                </h5>
+                <h5 class="card-title"><%= campground.title  %></h5>
+                <h5 class="card-title"><%= campground.properties.popUpMarkup %></h5>
                 <p class="card-text"> <%= campground.description  %> </p>
                 <p class="card-text">
                     <small class="text-muted"> <%= campground.location  %> </small>
@@ -25,3 +26,9 @@
     </div>
 </div>
 <%}%>
+<script>
+    const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+    const campground = { features: JSON.parse('<%- JSON.stringify(campgrounds) %>') };
+
+</script>
+<script src="/javascripts/clusterMap.js"> </script>
