--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col-6">
-        <div id='map' style='width: 400px; height: 300px;'></div>
+        <div id='map' style='width: 100%; height: 300px;'></div>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <% campground.images.forEach((img, i) => { %>
@@ -105,6 +105,8 @@
 <script>
     const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
     const coordinates = '<%- campground.geometry.coordinates%>';
+    const title = '<%- campground.title %>';
+    const loc = '<%- campground.location %>';
 </script>
 
 <script src="/javascripts/showPageMap.js"></script>
