--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,50 +1,63 @@
-<% layout('/layouts/boilerplate')%>
+<% layout('layouts/boilerplate')%>
 <div class="row">
-    <h1 class="text-center"> New Campground</h1>
-    <div class="col-6 offset-3">
-
-        <form action="/campgrounds" method='POST' novalidate class="validated-form" enctype="multipart/form-data">
+    <h1 class="text-center">New Campground</h1>
+    <div class="col-md-6 offset-md-3">
+        <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
-                <label class="form-label" for="title"> Title </label>
+                <label class="form-label" for="title">Title</label>
                 <input class="form-control" type="text" id="title" name="campground[title]" required>
-                <div class="valid-feedback"> Looks Good!</div>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
             </div>
             <div class="mb-3">
-                <label class="form-label" for="location"> Location </label>
+                <label class="form-label" for="location">Location</label>
                 <input class="form-control" type="text" id="location" name="campground[location]" required>
-                <div class="valid-feedback"> Looks Good!</div>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
             </div>
-            <div class="mb-3">
-                <label class="form-label" for="price"> Campground Price </label>
 
+            <!-- <div class="mb-3">
+                <label class="form-label" for="image">Image Url</label>
+                <input class="form-control" type="text" id="image" name="campground[image]" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div> -->
+            <div class="mb-3">
+                <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
-                    <input type="text" class="form-control" placeholder="0" aria-label="price"
+                    <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price"
                         aria-describedby="price-label" name="campground[price]" required>
                 </div>
-                <div class="valid-feedback"> Looks Good!</div>
-            </div>
-            <!-- <input type="file" name="image" id="" multiple> -->
-            <div class="input-group custom-file mb-3">
-                <input type="file" class="form-control custom-file-input" id="image" name="image" multiple>
-                <label class="input-group-text custom-file-label" for="image">Upload</label>
-            </div>
-            <!-- <div class="mb-3">
-                <label class="form-label" for="image"> Image URL </label>
-                <input class="form-control" type="text" id="image" name="campground[image]" required>
-                <div class="valid-feedback"> Looks Good!</div>
-            </div> -->
-
-            <div class="mb-3">
-                <label class="form-label" for="description"> Description </label>
-                <input class="form-control" type="text" id="description" name="campground[description]" required>
-                <div class="valid-feedback"> Looks Good!</div>
-            </div>
-            <div class="mb-3">
-                <button class="btn btn-success">Create New!</button>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
             </div>
 
+            <div class="mb-3">
+                <label class="form-label" for="description">Description</label>
+                <textarea class="form-control" type="text" id="description" name="campground[description]"
+                    required></textarea>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <div class="mb-3">
+                <div class="form-file custom-file">
+                    <input type="file" class="form-file-input" id="image" name="image" multiple>
+                    <label class="form-file-label" for="image">
+                        <span class="form-file-text custom-file-label">Choose image(s)...</span>
+                        <span class="form-file-button">Browse</span>
+                    </label>
+                </div>
+            </div>
+            <div class="mb-3">
+                <button class="btn btn-success">Add Campground</button>
+            </div>
         </form>
-        <div><a href="/campgrounds"> Back to All Campgrounds </a></div>
+        <a href="/campgrounds">All Campgrounds</a>
     </div>
 </div>
