--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,8 +1,8 @@
 <% layout('/layouts/boilerplate')%>
 <div id="map" style="width: 100%; height: 500px"></div>
-<h1>All Campgrounds</h1>
+<h1>All Attractions</h1>
 <div>
-    <a href="/campgrounds/new"> Add Campground</a>
+    <a href="/campgrounds/new"> Add Attraction</a>
 </div>
 
 <% for (let campground of campgrounds ) {%>
