--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,7 +9,7 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="/">Home</a>
                 <a class="nav-link" href="/campgrounds">Attractions</a>
-                <a class="nav-link" href="/campgrounds/new">New Attraction</a>
+                <a class="nav-link" href="/campgrounds/new">Add New Attraction</a>
                 <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
             </div>
             <div class="navbar-nav ml-auto">
