--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,14 +1,14 @@
 <% layout('/layouts/boilerplate')%>
 <div id="map" style="width: 100%; height: 500px"></div>
 <h1>All Attractions</h1>
-<div>
-    <a href="/campgrounds/new"> Add Attraction</a>
+<div class="mb-3">
+    <a class="btn btn-primary" style="background-color: yellowgreen;" href="/campgrounds/new"> Add New Attraction</a>
 </div>
 
 <% for (let campground of campgrounds ) {%>
-<div class="card" mb-3>
+<div class="card" mb-3 style="background-color: rgb(239, 252, 250);">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
             <% if(campground.images.length !== 0) { %>
             <img class="img-fluid" alt="" src="<%= campground.images[0].url %> ">
             <% } %>
@@ -16,12 +16,12 @@
         <div class="col-md-8">
             <div class="card-body">
                 <h5 class="card-title"><%= campground.title  %></h5>
-                <h5 class="card-title"><%= campground.properties.popUpMarkup %></h5>
                 <p class="card-text"> <%= campground.description  %> </p>
                 <p class="card-text">
                     <small class="text-muted"> <%= campground.location  %> </small>
                 </p>
-                <a class="btn btn-primary" href="/campgrounds/<%= campground._id %> "> View <%= campground.title  %>
+                <a class="btn btn-primary" style="background-color: rgb(250, 150, 0);"
+                    href="/campgrounds/<%= campground._id %> "> View <%= campground.title  %>
                 </a>
             </div>
         </div>
