--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,7 @@
 <% layout('/layouts/boilerplate')%>
+<link rel="stylesheet"
+    href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
+    type="text/css" />
 <div id="map" style="width: 100%; height: 500px"></div>
 <h1>All Attractions</h1>
 <div class="mb-3">
@@ -32,4 +35,5 @@
     const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
     const campground = { features: JSON.parse('<%- JSON.stringify(campgrounds) %>') };
 </script>
+<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
 <script src="/javascripts/clusterMap.js"> </script>
