--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,9 +1,12 @@
 <% layout('/layouts/boilerplate')%>
 <link rel="stylesheet" href="/stylesheets/stars.css">
-
+<link rel="stylesheet" href="/stylesheets/mapbox.css">
+<link rel="stylesheet"
+    href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
+    type="text/css" />
 <div class="row">
     <div class="col-6">
-        <div id='map' style='width: 100%; height: 300px;'></div>
+
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <% campground.images.forEach((img, i) => { %>
@@ -33,7 +36,6 @@
             <ul class="list-group list-group-flush">
                 <li class="list-group-item text-muted"><%= campground.location %> </li>
                 <li class="list-group-item ">created by: <%= campground.author.username %> </li>
-                <li class="list-group-item">$<%= campground.price %>/night </li>
             </ul>
 
             <% if(currentUser && campground.author.equals(currentUser._id)) {%>
@@ -52,7 +54,11 @@
         </div>
     </div>
     <div class="col-6">
+        <div id='map' class="mb-3" style='width: 100%; height: 600px;'></div>
+
+        <div style="height: 75px;"></div>
         <% if(currentUser) { %>
+
         <h3> Leave a Review</h3>
         <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form" novalidate>
             <!-- <div class="mb-3">
@@ -109,5 +115,5 @@
     const title = '<%- campground.title %>';
     const loc = '<%- campground.location %>';
 </script>
-
+<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
 <script src="/javascripts/showPageMap.js"></script>
