--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,11 +28,12 @@
             </div>
         </header>
         <main class="px-3">
-            <h1>YelpCamp</h1>
-            <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
+            <h1>TravelTo</h1>
+            <p class="lead"> Welcome to TravelTo app! <br> Jump right in and explore our many Attractions all over the
+                world. <br>
                 Feel free to share some of your own and comment on others!</p>
             <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
-                Campgrounds</a>
+                All Attractions</a>
         </main>
 
         <footer class="mt-auto text-white-50">
