--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,25 +1,29 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar navbar-dark" style="background-color: #393d47;">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #0a0b0c;">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">TravelTo</a>
+        <a class="navbar-brand" href="/">WhereToNext</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+        <div class="collapse navbar-collapse me-auto" id="navbarNavAltMarkup">
+            <div class="navbar-nav mr-auto">
                 <a class="nav-link" href="/">Home</a>
-                <a class="nav-link" href="/campgrounds">Attractions</a>
-                <a class="nav-link" href="/campgrounds/new">Add New Attraction</a>
-                <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+                <a class="nav-link" href="/attractions">Attractions</a>
+                <a class="nav-link" href="/attractions/new">Add New Attraction</a>
+
             </div>
             <div class="navbar-nav ml-auto">
+
                 <% if(!currentUser) {%>
                 <a class="nav-link" href="/login">Login</a>
                 <a class="nav-link" href="/register">SignUp</a>
                 <% } else {%>
                 <a class="nav-link" href="/logout">Logout</a>
                 <% } %>
+
+
             </div>
         </div>
+
     </div>
 </nav>
