--- a/views/attractions/edit.ejs
+++ b/views/attractions/edit.ejs
@@ -2,20 +2,20 @@
 <div class="row">
     <h1 class="text-center">Edit Attraction</h1>
     <div class="col-md-6 offset-md-3">
-        <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" novalidate class="validated-form"
+        <form action="/attractions/<%=attraction._id%>?_method=PUT" method="POST" novalidate class="validated-form"
             enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
-                <input class="form-control" type="text" id="title" name="campground[title]"
-                    value="<%=campground.title %>" required>
+                <input class="form-control" type="text" id="title" name="attraction[title]"
+                    value="<%=attraction.title %>" required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
-                <input class="form-control" type="text" id="location" name="campground[location]"
-                    value="<%=campground.location %>" required>
+                <input class="form-control" type="text" id="location" name="attraction[location]"
+                    value="<%=attraction.location %>" required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
@@ -24,8 +24,8 @@
 
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
-                <textarea class="form-control" type="text" id="description" name="campground[description]"
-                    required><%= campground.description%></textarea>
+                <textarea class="form-control" type="text" id="description" name="attraction[description]"
+                    required><%= attraction.description%></textarea>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="mb-3">
-                <% campground.images.forEach(function(img, i) {  %>
+                <% attraction.images.forEach(function(img, i) {  %>
                 <img src="<%=img.thumbnail %>" class="img-thumbnail" alt="">
                 <div class="form-check-inline">
                     <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%=img.filename%>">
@@ -49,9 +49,9 @@
                 <% })%>
             </div>
             <div class="mb-3">
-                <button class="btn btn-info">Update Campground</button>
+                <button class="btn btn-info">Update Attraction</button>
             </div>
         </form>
-        <a href="/campgrounds/<%= campground._id%>">Back To Campground</a>
+        <a href="/attractions/<%= attraction._id%>">Back To Attraction</a>
     </div>
 </div>
