--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WhereToNext</title>
+    <title>WanderHub</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
         integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/home.css">
@@ -14,7 +14,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
-                <h3 class="float-md-left mb-0">WhereToNext</h3>
+                <h3 class="float-md-left mb-0">WanderHub</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-right">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                     <a class="nav-link" href="/attractions">Attractions</a>
@@ -29,7 +29,7 @@
         </header>
         <main class="px-3">
             <h1>WhereToNext</h1>
-            <p class="lead"> Welcome to WhereToNext app! <br> Jump right in and explore our many Attractions all over
+            <p class="lead"> Welcome to WanderHub app! <br> Jump right in and explore our many Attractions all over
                 the
                 world. <br>
                 Feel free to share some of your own and comment on others!</p>
