Changed titles for all pages

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
             </div>
         </header>
         <main class="px-3">
-            <h1>WhereToNext</h1>
+            <h1>WanderHub</h1>
             <p class="lead"> Welcome to WanderHub app! <br> Jump right in and explore our many Attractions all over
                 the
                 world. <br>
