--- a/views/attractions/index.ejs
+++ b/views/attractions/index.ejs
@@ -1,39 +1,75 @@
-<% layout('/layouts/boilerplate')%>
-<link rel="stylesheet"
-    href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
-    type="text/css" />
-<div id="map" style="width: 100%; height: 500px"></div>
-<h1>All Attractions</h1>
-<div class="mb-3">
-    <a class="btn btn-primary" style="background-color: yellowgreen;" href="/attractions/new"> Add New Attraction</a>
-</div>
+<!DOCTYPE html>
+<html lang="en">
 
-<% for (let attraction of attractions ) {%>
-<div class="card" mb-3 style="background-color: rgb(239, 252, 250);">
-    <div class="row">
-        <div class="col-md-3">
-            <% if(attraction.images.length !== 0) { %>
-            <img class="img-fluid" alt="" src="<%= attraction.images[0].url %> ">
-            <% } %>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WanderHub: All Attractions</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.css' rel='stylesheet' />
+
+</head>
+
+<body class="d-flex flex-column vh-100">
+    <%- include('../partials/navbar') %>
+    <main class="container mt-5">
+        <%= success  %>
+        <link rel="stylesheet"
+            href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
+            type="text/css" />
+        <div id="map" style="width: 100%; height: 500px"></div>
+        <h1>All Attractions</h1>
+        <div class="mb-3">
+            <a class="btn btn-primary" style="background-color: yellowgreen;" href="/attractions/new"> Add New
+                Attraction</a>
         </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <h5 class="card-title"><%= attraction.title  %></h5>
-                <p class="card-text"> <%= attraction.description  %> </p>
-                <p class="card-text">
-                    <small class="text-muted"> <%= attraction.location  %> </small>
-                </p>
-                <a class="btn btn-primary" style="background-color: rgb(250, 150, 0);"
-                    href="/attractions/<%= attraction._id %> "> View <%= attraction.title  %>
-                </a>
+
+        <% for (let attraction of attractions ) {%>
+        <div class="card mb-3" style="image-resolution: 200;  background-color: rgb(239, 252, 250);">
+            <div class="row">
+                <div class="col-md-3">
+                    <% if(attraction.images.length !== 0) { %>
+                    <img class="img-fluid" style="height: 100%;" width="100%" alt=""
+                        src="<%= attraction.images[0].url %> ">
+                    <% } %>
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title"><%= attraction.title  %></h5>
+                        <p class="card-text"> <%= attraction.description  %> </p>
+                        <p class="card-text">
+                            <small class="text-muted"> <%= attraction.location  %> </small>
+                        </p>
+                        <a class="btn btn-primary" style="background-color: rgb(250, 150, 0);"
+                            href="/attractions/<%= attraction._id %> "> View <%= attraction.title  %>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-<%}%>
+        <%}%>
 <script>
     const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
     const attraction = { features: JSON.parse('<%- JSON.stringify(attractions) %>') };
 </script>
-<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
-<script src="/javascripts/clusterMap.js"> </script>
+        <script
+            src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
+        <script src="/javascripts/clusterMap.js"> </script>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
+    <script src="/javascripts/validateForms.js"></script>
+</body>
+
+<%- include('../partials/footer') %>
+
+</html>
+<!-- <title>All Attractions</title> -->
