--- a/views/attractions/show.ejs
+++ b/views/attractions/show.ejs
@@ -1,119 +1,155 @@
-<% layout('/layouts/boilerplate')%>
-<link rel="stylesheet" href="/stylesheets/stars.css">
-<link rel="stylesheet" href="/stylesheets/mapbox.css">
-<link rel="stylesheet"
-    href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
-    type="text/css" />
-<div class="row">
-    <div class="col-6">
+<!DOCTYPE html>
+<html lang="en">
 
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <% attraction.images.forEach((img, i) => { %>
-                <div class="carousel-item <%= i == 0 ? 'active' : '' %>">
-                    <img src="<%= img.url %>" class="d-block w-100" alt="">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= attraction.title%>, <%=attraction.location%></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.css' rel='stylesheet' />
+
+</head>
+
+<body class="d-flex flex-column vh-100">
+    <%- include('../partials/navbar') %>
+    <main class="container mt-5">
+        <%= success  %>
+        <link rel="stylesheet" href="/stylesheets/stars.css">
+        <link rel="stylesheet" href="/stylesheets/mapbox.css">
+        <link rel="stylesheet"
+            href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
+            type="text/css" />
+        <div class="row">
+            <div class="col-6">
+
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <% attraction.images.forEach((img, i) => { %>
+                        <div class="carousel-item <%= i == 0 ? 'active' : '' %>">
+                            <img src="<%= img.url %>" class="d-block w-100" alt="">
+                        </div>
+                        <%})  %>
+
+                    </div>
+                    <% if(attraction.images.length > 1) { %>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </a>
+                    <% } %>
                 </div>
-                <%})  %>
+                <div class="card mb-3">
 
+                    <div class="card-body">
+                        <h5 class="card-title"><%= attraction.title %> </h5>
+                        <p class="card-text"><%= attraction.description %> </p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item text-muted"><%= attraction.location %> </li>
+                        <li class="list-group-item ">created by: <%= attraction.author.username %> </li>
+                    </ul>
+
+                    <% if(currentUser && attraction.author.equals(currentUser._id)) {%>
+                    <div class="card-body">
+                        <a class="card-link btn btn-info " href="/attractions/<%=attraction._id%>/edit">Edit</a>
+                        <form class="d-inline" action="/attractions/<%=attraction._id%>?_method=DELETE" method="POST">
+                            <button class="btn btn-danger">Delete</button>
+                        </form>
+                    </div>
+                    <% } %>
+                    <a class="mb-3 btn btn-primary" style="background-color: yellowgreen;" href="/attractions"> All
+                        Attractions</a>
+
+
+
+
+                </div>
             </div>
-            <% if(attraction.images.length > 1) { %>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </a>
-            <% } %>
-        </div>
-        <div class="card mb-3">
+            <div class="col-6">
+                <div id='map' class="mb-3" style='width: 100%; height: 600px;'></div>
 
-            <div class="card-body">
-                <h5 class="card-title"><%= attraction.title %> </h5>
-                <p class="card-text"><%= attraction.description %> </p>
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item text-muted"><%= attraction.location %> </li>
-                <li class="list-group-item ">created by: <%= attraction.author.username %> </li>
-            </ul>
+                <div style="height: 75px;"></div>
+                <% if(currentUser) { %>
 
-            <% if(currentUser && attraction.author.equals(currentUser._id)) {%>
-            <div class="card-body">
-                <a class="card-link btn btn-info " href="/attractions/<%=attraction._id%>/edit">Edit</a>
-                <form class="d-inline" action="/attractions/<%=attraction._id%>?_method=DELETE" method="POST">
-                    <button class="btn btn-danger">Delete</button>
-                </form>
-            </div>
-            <% } %>
-            <a class="mb-3" href="/attractions"> All Attractions</a>
-
-
-
-
-        </div>
-    </div>
-    <div class="col-6">
-        <div id='map' class="mb-3" style='width: 100%; height: 600px;'></div>
-
-        <div style="height: 75px;"></div>
-        <% if(currentUser) { %>
-
-        <h3> Leave a Review</h3>
-        <form action="/attractions/<%= attraction._id %>/reviews" method="POST" class="mb-3 validated-form" novalidate>
-            <!-- <div class="mb-3">
+                <h3> Leave a Review</h3>
+                <form action="/attractions/<%= attraction._id %>/reviews" method="POST" class="mb-3 validated-form"
+                    novalidate>
+                    <!-- <div class="mb-3">
                 <label for="rating" class="form-label">Rating</label>
                 <input type="range" class="form-range" name="review[rating]" id="rating" max="5" , min="1">
             </div> -->
-            <fieldset class="starability-basic">
-                <legend>First rating:</legend>
-                <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked
-                    aria-label="No rating." />
-                <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-                <label for="first-rate1" title="Terrible">1 star</label>
-                <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                <label for="first-rate2" title="Not good">2 stars</label>
-                <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                <label for="first-rate3" title="Average">3 stars</label>
-                <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                <label for="first-rate4" title="Very good">4 stars</label>
-                <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                <label for="first-rate5" title="Amazing">5 stars</label>
-            </fieldset>
-            <div class="mb-3">
-                <label class="form-label" for="body">Review</label>
-                <textarea class="form-control" id="body" name="review[body]" cols="40" rows="3" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-success">Submit</button>
-        </form>
-        <% } %>
-        <% for(let review of attraction.reviews){ %>
-        <div class="card mb-3">
-            <div class="card-body">
-
-                <h5 class="card-subtitle mb-2 text-muted"><%= review.author.username  %> </h5>
-                <p class="starability-result" data-rating="<%= review.rating %>">
-                    Rated: <%= review.rating  %> stars
-                </p>
-
-                <p class="card-txt"><%= review.body %></p>
-                <% if(currentUser && review.author.equals(currentUser._id)) {%>
-                <form action="/attractions/<%= attraction._id %>/reviews/<%= review._id %>?_method=DELETE"
-                    method="POST">
-                    <button class="btn btn-danger">Delete</button>
+                    <fieldset class="starability-basic">
+                        <legend>First rating:</legend>
+                        <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked
+                            aria-label="No rating." />
+                        <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                        <label for="first-rate1" title="Terrible">1 star</label>
+                        <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                        <label for="first-rate2" title="Not good">2 stars</label>
+                        <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                        <label for="first-rate3" title="Average">3 stars</label>
+                        <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                        <label for="first-rate4" title="Very good">4 stars</label>
+                        <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                        <label for="first-rate5" title="Amazing">5 stars</label>
+                    </fieldset>
+                    <div class="mb-3">
+                        <label class="form-label" for="body">Review</label>
+                        <textarea class="form-control" id="body" name="review[body]" cols="40" rows="3"
+                            required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-success">Submit</button>
                 </form>
                 <% } %>
+                <% for(let review of attraction.reviews){ %>
+                <div class="card mb-3">
+                    <div class="card-body">
 
+                        <h5 class="card-subtitle mb-2 text-muted"><%= review.author.username  %> </h5>
+                        <p class="starability-result" data-rating="<%= review.rating %>">
+                            Rated: <%= review.rating  %> stars
+                        </p>
+
+                        <p class="card-txt"><%= review.body %></p>
+                        <% if(currentUser && review.author.equals(currentUser._id)) {%>
+                        <form action="/attractions/<%= attraction._id %>/reviews/<%= review._id %>?_method=DELETE"
+                            method="POST">
+                            <button class="btn btn-danger">Delete</button>
+                        </form>
+                        <% } %>
+
+                    </div>
+                </div>
+                <% } %>
             </div>
         </div>
-        <% } %>
-    </div>
-</div>
-<script>
-    const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
-    const coordinates = '<%- attraction.geometry.coordinates%>';
-    const title = '<%- attraction.title %>';
-    const loc = '<%- attraction.location %>';
-</script>
-<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
-<script src="/javascripts/showPageMap.js"></script>
+        <script>
+            const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+            const coordinates = '<%- attraction.geometry.coordinates%>';
+            const title = '<%- attraction.title %>';
+            const loc = '<%- attraction.location %>';
+        </script>
+        <script
+            src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
+        <script src="/javascripts/showPageMap.js"></script>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
+    <script src="/javascripts/validateForms.js"></script>
+</body>
+
+<%- include('../partials/footer') %>
+
+</html>
